<resources>
    <string name="app_name">My Books</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Log Out</string>
    <string name="signed_out">Logged Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="example_id">Firebase User ID: 123456789abc</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading…</string>

    <string name="welcome">Welcome to the MyBooks App!</string>
    <string name="welcome_home">Choose what you want to do...</string>
    <string name="which_book">Which of these books do you like most?</string>
    <string name="pick_username">Pick a username</string>
    <string name="username">Username</string>
    <string name="option1">Harry Potter and the prisoner of Azkaban</string>
    <string name="option2">The Autobiography of Benjamin Franklin</string>
    <string name="option3">The Teeth of the Tiger</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_books">My Books</string>
    <string name="log_out">Log Out</string>

    <string name="search_instruction">Search by title, author or ISBN</string>

    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>

    <string name="title_availability">Title not available</string>
    <string name="author_availability">Author not available</string>
    <string name="by">by</string>

    <string name="published_by">Published By</string>
    <string name="description">Description</string>
    <string name="add">Add book</string>

    <string name="contentdescription">Image Display</string>

    <string name="searching">Searching...</string>

    <string name="my_list_of_books">My List Of Books</string>
    <string name="delete_instruction">Hold a book to remove it</string>
    <string name="empty_list">Your list is empty</string>

    <string name="log_out_question">Are you sure you want to log out?</string>

</resources>
