<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:text="@string/welcome"
            android:elevation="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/books"
            android:layout_weight="0.69" />

        <TextView
            android:id="@+id/detail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="2dp"
            android:visibility="invisible"
            tools:text="@string/example_id" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="130dp"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:background="@drawable/background"
            android:visibility="gone" />

        <TextView
            android:id="@+id/status"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/signed_out" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="1">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="130dp"
                android:background="@drawable/background"
                android:layout_height="54dp"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/email_create_account_button"
                android:background="@drawable/background"
                android:layout_width="130dp"
                android:layout_height="54dp"
                android:text="@string/create_account"
                android:layout_marginLeft="45dp"
                android:layout_weight="0.07" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>