<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.carlijnquik.carlijnquik_pset6.NewUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:id="@+id/textView" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/contentdescription"
        app:srcCompat="@drawable/go"
        android:scaleType="fitCenter"
        android:id="@+id/go"
        android:onClick="Go"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/which_book"
        android:id="@+id/question_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_book"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/potter"
            android:textSize="15sp"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="22dp" />

        <RadioButton
            android:text="@string/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/benjamin"
            android:textSize="15sp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:text="@string/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/tiger"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

</RelativeLayout>
