<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="4">

    <TextView
            android:text="@string/welcome"
            android:elevation="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
            android:id="@+id/status"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/signed_out"
        android:layout_alignTop="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignTop="@+id/status"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_password_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="1"
        android:layout_below="@+id/email_password_fields"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/bLogIn"
            android:layout_width="130dp"
            android:background="@drawable/background"
            android:layout_height="54dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/bCreateAccount"
            android:background="@drawable/background"
            android:layout_width="130dp"
            android:layout_height="54dp"
            android:text="@string/create_account"
            android:layout_marginLeft="45dp"
            android:layout_weight="0.07" />

    </LinearLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="183dp"
        android:layout_height="165dp"
        android:src="@drawable/books"
        android:layout_below="@+id/email_password_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

</RelativeLayout>