<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:scaleType="fitCenter"
            android:padding="2dp"
            app:srcCompat="@drawable/logout"
            android:id="@+id/ibLogOut"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:scaleType="fitCenter"
            android:padding="2dp"
            app:srcCompat="@drawable/home"
            android:id="@+id/ibHome"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHome"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:text="@string/my_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMyBooks"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="97dp" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/books"
            android:id="@+id/ibMyBooks"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp" />

        <TextView
            android:text="@string/log_out"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogOut"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/search"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSearch"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:scaleType="fitCenter"
            android:padding="2dp"
            app:srcCompat="@drawable/search"
            android:id="@+id/ibSearch"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tvSearch"
            android:layout_alignStart="@+id/tvSearch" />

    </RelativeLayout>

</RelativeLayout>